--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 <h1>Hi <%= name %></h1>
-<form action="/logout?_method=DELETE" method="POST">
+<form action="/user/logout?_method=DELETE" method="POST">
   <button type="submit">Log Out</button>
 </form>
