--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,29 +1,29 @@
 <h1>Register</h1>
 <form action="/user/register" method="POST">
-  <div>
+  <div class="field-input">
     <label for="name">Name</label>
     <input type="text" id="name" name="username" required>
   </div>
-  <div>
+  <div class="field-input">
     <label for="name">First Name</label>
     <input type="text" id="name" name="firstname" required>
   </div>
-  <div>
+  <div class="field-input">
     <label for="name">Last Name</label>
     <input type="text" id="name" name="lastname" required>
   </div>
-  <div>
+  <div class="field-input">
     <label for="email">Email</label>
     <input type="email" id="email" name="email" required>
   </div>
-  <div>
+  <div class="field-input">
     <label for="password">Password</label>
     <input type="password" id="password" name="password" required>
   </div>
-  <div>
+  <div class="field-input">
     <label for="password2">Password</label>
     <input type="password" id="password2" name="password2" required>
   </div>
   <button type="submit">Register</button>
 </form>
-<a href="/user/login">Login</a>
+<a href="/user/login">Already Registered? Login here.</a>
